app/test/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test-namespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: test-namespace-rewrite-test-to-root@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "200"
spec:
  ingressClassName: traefik
  rules:
    - host: placeholder-hostname
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rewrite-test-to-root
  namespace: test-namespace
spec:
  replacePath:
    path: /
